3 August 2005 Sylvain Pion
- Fix some typos.

1 August 2005 Sylvain Pion
- Use Rational_traits instead of K::FT_{numerator|denominator}.

29 July 2005 Sylvain Pion
- do_intersect(Iso_rectangle_2) : Remove useless assign().

29 March 2005 Sylvain Pion
- Fix typo in do_intersect(Line_2, Segment_2) spotted by Baruch.

============================= CGAL 3.1 ===========================

22 June 2004 Sylvain Pion
- Typo spotted by g++ 3.4.
- Add missing #include<> spotted by g++ 3.4.

20 June 2004 Sylvain Pion
- Change CGAL::is_finite to CGAL_NTS is_finite.

20 June 2004 Sylvain Pion
- Fix typos in un-instantiated code, spotted by g++ 3.4.

20 May 2004 Andreas Fabri
- split return typename K::Something_2 in a typedef typename K::Something_2
  Something; return Something (to please SunPro CC 5.3)

14 May 2004 Sylvain Pion
- sign_of_cross() : simplify code and remove warning.

17 April 2004 Andreas Fabri
- Global functions call functor

29 March 2004 Radu Ursu
- removed obsolete doc_tex directory

09 Mar 2004 Andreas Fabri
Replaced operator*(Vector,Vector), and operator*(Vector,NT) with functors

2.33 (02 Jan 2004) [rursu]
- fixed Ray_2_Triangle_2_intersection.h for gcc 3.4

2.32 (18 Jan 2004)
- Removed CGAL_CFG_RETURN_TYPE_BUG_2 workarounds.

2.31 (24 Nov 2003) [af]
- moved file include/CGAL/intersections.h to package Intersections_3

2.30 (21 October 2003)
- new header

2.29 (17 October 2003) [sp]
- Remove warning by re-ordering data members.

2.28 (7 October 2003) [af]
- Removed CGAL_CFG_NO_AUTOMATIC_TEMPLATE_INCLUSION
- Removed Circle_2_Circle_2_intersection.C

2.27 (4 October 2003) [af]
- Moved some code in Triangle_2_Triangle_2_do_intersect.h to CGALi and changed Triangle_2<K> to K::Triangle_2
- Added definitions from a .C file to .h file so that automatic header inclusion can work

2.26(26 September 2003) [af]
- Added maintainer

2.24 (23 September 2003) [af]
- Made the code independent from K::Point.x()/y()/dimension()

2.22 (10 September 2003)