@@ -30,7 +30,7 @@
 #include <CGAL/Line_2.h>
 //#include <CGAL/Segment_2.h>
 //#include <CGAL/Point_2.h>
-#include <CGAL/utils.h>
+#include <CGAL/kernel_assertions.h>
 #include <CGAL/number_utils.h>
 
 CGAL_BEGIN_NAMESPACE
