@@ -28,7 +28,7 @@
 
 #include <CGAL/Bbox_2.h>
 #include <CGAL/Ray_2.h>
-#include <CGAL/utils.h>
+#include <CGAL/kernel_assertions.h>
 #include <CGAL/number_utils.h>
 
 CGAL_BEGIN_NAMESPACE
