@@ -28,7 +28,7 @@
 
 #include <CGAL/Segment_2.h>
 #include <CGAL/Point_2.h>
-#include <CGAL/utils.h>
+#include <CGAL/kernel_assertions.h>
 #include <CGAL/number_utils.h>
 
 #include <cassert>
