@@ -1,3 +1,6 @@
+4 August 2005 Sylvain Pion
+- Replace #include<CGAL/utils.h>.
+
 3 August 2005 Sylvain Pion
 - Fix some typos.
 
